Bug 451428 - Checked QCheckBox does not indicate pressed state
Summary: Checked QCheckBox does not indicate pressed state
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-03-12 13:57 UTC by Kai Uwe Broulik
Modified: 2022-09-11 17:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2022-03-12 13:57:42 UTC
STEPS TO REPRODUCE
1.  Have a checkbox that is checked
2. Press the mouse button

OBSERVED RESULT
No visual feedback

EXPECTED RESULT
The checkbox darkens or something

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2022-03-12

ADDITIONAL INFORMATION
Checking an unchecked also is a bit glitchy as it turns dark on press but the animation then animates from regular white background to blue
Comment 1 Bug Janitor Service 2022-09-10 04:31:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/244
Comment 2 Nate Graham 2022-09-11 17:27:14 UTC
Git commit 48110036359fb7a5969f9e99e7b75692e459d28a by Nate Graham.
Committed on 10/09/2022 at 04:28.
Pushed by ngraham into branch 'master'.

Add pressed appearance for checked checkboxes and radio buttons

There was a pressed appearance for unchecked checkboxes and radio
buttons, but we were missing one for their checked states. This
commit simply adds the same effect: a slight and subtle darkening
while pressed.
FIXED-IN: 5.26

M  +2    -2    kstyle/breezehelper.cpp

https://invent.kde.org/plasma/breeze/commit/48110036359fb7a5969f9e99e7b75692e459d28a