Add pressed appearance for checked checkboxes and radio buttons

There was a pressed appearance for unchecked checkboxes and radio
buttons, but we were missing one for their checked states. This
commit simply adds the same effect: a slight and subtle darkening
while pressed.

BUG: 451428
FIXED-IN: 5.26